Fix visual bug, caused error messages to be covered by other elements.

--- a/css/mystyles.css
+++ b/css/mystyles.css
@@ -11,14 +11,16 @@
     bottom: 35px;
     right: 35px;
 	
-	z-index: 10000;
+	z-index: 10001;
 }
 
 #errorMsg {
 	position: fixed;
     bottom: 35px;
     left: 35px;
-	width: auto !important;
+	width: auto;
+	/* Maximum width - (#scrollToTopButton: right + .btn-circle.btn-custom: width + extra pixels for space) */
+	max-width: calc(100% - calc(35px + 60px + 75px)) !important;
 	
 	padding-top: 6px;
 	padding-bottom: 6px;
@@ -52,9 +54,9 @@
 	text-align: center; 
 }
 
-.btn-circle.btn-custom { 
-	width: 60px; 
-	height: 60px; 
+.btn-circle.btn-custom {
+	width: 60px;
+	height: 60px;
 	padding: 7px 10px; 
 	border-radius: 30px; 
 	font-size: 24px; 
